--- a/demos/websockets/listener2.html
+++ b/demos/websockets/listener2.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebSocket Real-Time Chart</title>
+    <title>Awesome websocket graph</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>Real-Time Sine Wave</h1>
+    <h1>Awesome websocket graph 👋</h1>
     <canvas id="sineChart"></canvas>
 
     <script>
-        const ctx = document.getElementById('sineChart').getContext('2d');
+        const ctx = document.getElementById('sineChart').getContext('2d')
         const chart = new Chart(ctx, {
             type: 'line',
             data: {
@@ -32,9 +32,9 @@
                     y: { title: { display: true, text: "Value" } }
                 }
             }
-        });
+        })
 
-        const ws = new WebSocket("ws://localhost:8765");
+        const ws = new WebSocket("ws://localhost:8765")
 
         ws.onmessage = function(event) {
             const data = JSON.parse(event.data);
@@ -47,10 +47,10 @@
             }
 
             chart.update();
-        };
+        }
 
-        ws.onopen = function() { console.log("Connected to WebSocket server"); };
-        ws.onclose = function() { console.log("WebSocket closed"); };
+        ws.onopen = function() { console.log("Connected to WebSocket server") }
+        ws.onclose = function() { console.log("WebSocket closed") }
     </script>
 </body>
 </html>
