--- a/demos/websockets/listener1.html
+++ b/demos/websockets/listener1.html
@@ -6,7 +6,7 @@
     <title>WebSocket Demo</title>
 </head>
 <body>
-    <h1>WebSocket Data</h1>
+    <h1>WebSocket Data 😎</h1>
     <div id="data"></div>
 
     <script>
